--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: NT7LhxHCd08WYMlZq94+YSAzEsnNG2Zn2cO3NTD++o/d8WGgN0CdxcZ53HztR5ibELDQxDMqI/804BWluXrk9pBdI1hOHf8mVOyMz4Gpat70BZGo2zPvrWS7mnzm/GzjdhKDMCwQCwRrinGgrIsveFutNmcEBeDQX7LRxUoe78M=
+    secure: IfDctHLRki+9jpV1COXDPenyr/TsEB0Z/MRFzUTr/4E/5seW6/pq+dGLND790+4IR4rt3u6xL8y8iAMxWTGboEvS5+G+JtKng4FpMxaq9DOJfNljwc7w+tkCPYKjSbfXVxEVyvOldVyKL3YRJyQVNZ66J8ONRmlajNW89y1iXdA=
